header, side bar, crud completed

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<app-header></app-header>
+<div class="main-body">
+    <app-sider></app-sider>
+    <div class="body-continer">
+        <router-outlet></router-outlet>
+    </div>
+</div>
